Changes done in modules file

--- a/Modules and Packages.ipynb
+++ b/Modules and Packages.ipynb
@@ -181,7 +181,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! python file3.py 30"
+   ]
   }
  ],
  "metadata": {
